Fixed visibility issue with flipped card

--- a/projects/pro-huskies/styles/footer.scss
+++ b/projects/pro-huskies/styles/footer.scss
@@ -1,6 +1,6 @@
 /* - - - FOOTER - - - */
 footer {
 	padding-bottom: 90px;
-	min-height: 20vh;
+	// min-height: 20vh;
 }
 
