--- a/projects/pro-huskies/styles/modules/athlete-card-two.scss
+++ b/projects/pro-huskies/styles/modules/athlete-card-two.scss
@@ -1,54 +1,70 @@
-.card {
+athlete-card {
+	max-width: 300px;
+}
+.athlete-info {
+	width: 100%;
 	background-color: var(--paper-dark);
 	color: var(--ink-light);
 	border-radius: var(--corners);
-	max-width: 320px;
+	display: flex;
+	flex-direction: column;
 	text-align: center;
 	font-style: italic;
-	padding: 10px 0;
-	
+
 	p, h3 {
 		align-self: center;
+	}
+
+	picture {
+		display: none;
+	}
+
+	* {
 		padding: 5px;
-	}
-
-	img {
-		display: none;
-	}
-
-	.back {
-		display: none;
 	}
 }
 
-@media (min-width: 500px) {
+@media (min-width: 700px) {
 	athlete-card {
-		display: block;
-		height: 550px;
-		width: 400px;
-		text-align: center;
+		max-width: 320px;
+		height: 500px;
+		margin-left: 2em;
+		border: 2px solid blue;
+		padding: 5px;
 	}
 
 	.card {
-		height: 100%;
 		width: 100%;
+		height: 100%;
+		position: relative;
+		transition: transform 1s;
+		transform-style: preserve-3d;
+	}
+
+	athlete-card:hover > .card {
+		curser: pointer;
+		transform: rotateY(180deg);
+	}
+
+	.athlete-info {
+		height: 100%;
+		display: grid;
+		grid-template-rows: 90% 8% 2%;
+		padding: 10px;
 		border-radius: 0;
 		position: relative;
-		padding: 10px;
-		transition: transform 1s ease;
-		transform-style: preserve-3d;
-		
+		border: 1px solid yellow;
+
 		picture {
+			display: block;
 			margin-left: auto;
 			margin-right: auto;
-			// clip-path: polygon(0 0, 100% 0, 100% 65%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0 65%);
 			clip-path: polygon(0 0, 100% 0, 100% 75%, 90% 80%, 90% 100%, 10% 100%, 10% 80%, 0 75%);
 			background: linear-gradient(hsla(259, 100%, 70%, 1), white);
 			min-width: 100%;
 		}
 
 		img {
-			display: flex;
 			clip-path: polygon(2% 1.5%, 98% 1.5%, 98% 74.5%, 88% 79.5%, 88% 98.5%, 12% 98.5%, 12% 79.5%, 2% 74.5%);
 			// position: absolute;
 			min-height: 100%;
@@ -59,7 +75,6 @@
 			writing-mode: vertical-lr;
 			top: 70%;
 			left: 4%;
-			// border: 1px solid red;
 			margin-top: auto;
 			margin-bottom: auto;
 			min-height:100px;
@@ -78,44 +93,22 @@
 			margin-bottom: auto;
 			min-height:100px;		
 		}
-
-		.front {
-			display: grid;
-			grid-template-rows: 90% 8% 2%;
-			text-align: center;
-			height: 100%;
-			width: 100%;
-		}
 	}
 
-	athlete-card {
-		perspective: 1500px;
-	}
-
-	athlete-card:hover > .card {
-		cursor: pointer;
-		transform: rotateY(180deg);
-	}
-
-	athlete-card:hover .back:hover {
-		transform: rotateY(0deg);
-	}
-
-
-	.front{
+	.front, .back {
 		width: 100%;
 		height: 100%;
 		position: absolute;
 		backface-visibility: hidden;
 	}
 
-	.card .back {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		display: flex;
+	.back {
+		padding: 10px;
+		// max-width: 320px;
+		color: red;
 		background-color: white;
+		border: 2px solid red;
 		transform: rotateY(180deg);
-		backface-visibility: hidden;
-	}	
+	}
+	
 }
