--- a/projects/pro-huskies/styles/modules/athlete-card.scss
+++ b/projects/pro-huskies/styles/modules/athlete-card.scss
@@ -67,6 +67,7 @@
 		// position: absolute;
 		perspective: 1000px;
 		box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+
 	}
 	
 	.card {
@@ -95,8 +96,9 @@
 	}
 
 	.back {
-		background-color: grey;
+		background-color: white;
 		transform: translateY(-100%) rotateY(180deg);
+		backface-visibility: hidden;
 	}
 }
 .card-grid {
